// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EcBtnDropdown should render as expected 1`] = `
<div
  class="ec-btn-dropdown"
  data-test="ec-btn-dropdown"
>
  <button
    class="ec-btn ec-btn-dropdown__btn ec-btn--md ec-btn--rounded ec-btn--primary ec-btn--primary-reverse"
    data-test="ec-btn-dropdown__btn ec-btn"
    type="button"
  >
    <!---->
     
    <span
      class="ec-btn__text"
      data-test="ec-btn__text"
    >
      
    Convert & Pay
  
    </span>
     
    <!---->
  </button>
   
  <div
    class="ec-dropdown-search"
    data-test="ec-dropdown-search"
  >
    <ec-stub
      class="ec-dropdown-search__trigger"
      data-test="ec-popover-dropdown-search ec-stub ec-popover-stub"
      offset="8"
      placement="bottom"
      popoverinnerclass="ec-dropdown-search__popover"
      popperoptions="[object Object]"
    >
      <button
        class="ec-btn ec-btn--md ec-btn--rounded ec-btn--icon-only ec-btn--primary ec-btn--primary-reverse ec-btn-dropdown__dropdown-btn"
        data-test="ec-btn-dropdown__dropdown-btn ec-btn"
        type="submit"
      >
        <svg
          class="ec-btn__icon ec-icon"
          data-test="ec-btn__icon"
          height="22"
          width="22"
        >
          <use
            xlink:href="#ec-simple-arrow-drop-down"
          />
        </svg>
         
        <!---->
         
        <!---->
      </button>
        
      <div>
        <ul
          class="ec-dropdown-search__item-list"
          data-test="ec-dropdown-search__item-list"
        >
          <!---->
           
          <!---->
           
        </ul>
      </div>
    </ec-stub>
  </div>
</div>
`;

exports[`EcBtnDropdown should render with a list of options on the dropdown search 1`] = `
<div
  class="ec-btn-dropdown"
  data-test="ec-btn-dropdown"
>
  <button
    class="ec-btn ec-btn-dropdown__btn ec-btn--md ec-btn--rounded ec-btn--primary ec-btn--primary-reverse"
    data-test="ec-btn-dropdown__btn ec-btn"
    type="button"
  >
    <!---->
     
    <span
      class="ec-btn__text"
      data-test="ec-btn__text"
    >
      
    Convert & Pay
  
    </span>
     
    <!---->
  </button>
   
  <div
    class="ec-dropdown-search"
    data-test="ec-dropdown-search"
  >
    <ec-stub
      class="ec-dropdown-search__trigger"
      data-test="ec-popover-dropdown-search ec-stub ec-popover-stub"
      offset="8"
      placement="bottom"
      popoverinnerclass="ec-dropdown-search__popover"
      popperoptions="[object Object]"
    >
      <button
        class="ec-btn ec-btn--md ec-btn--rounded ec-btn--icon-only ec-btn--primary ec-btn--primary-reverse ec-btn-dropdown__dropdown-btn"
        data-test="ec-btn-dropdown__dropdown-btn ec-btn"
        type="submit"
      >
        <svg
          class="ec-btn__icon ec-icon"
          data-test="ec-btn__icon"
          height="22"
          width="22"
        >
          <use
            xlink:href="#ec-simple-arrow-drop-down"
          />
        </svg>
         
        <!---->
         
        <!---->
      </button>
        
      <div>
        <ul
          class="ec-dropdown-search__item-list"
          data-test="ec-dropdown-search__item-list"
        >
          <!---->
           
          <!---->
           
          <li
            class="ec-dropdown-search__item"
            data-test="ec-dropdown-search__item ec-dropdown-search__item--0 ec-mock ec-tooltip-mock"
            title="Spot"
          >
            Spot
          </li>
          <li
            class="ec-dropdown-search__item"
            data-test="ec-dropdown-search__item ec-dropdown-search__item--1 ec-mock ec-tooltip-mock"
            title="Convert"
          >
            Convert
          </li>
        </ul>
      </div>
    </ec-stub>
  </div>
</div>
`;

exports[`EcBtnDropdown should render with both buttons disabled 1`] = `
<div
  class="ec-btn-dropdown"
  data-test="ec-btn-dropdown"
>
  <button
    class="ec-btn ec-btn-dropdown__btn ec-btn--md ec-btn--rounded ec-btn--primary ec-btn--primary-reverse"
    data-test="ec-btn-dropdown__btn ec-btn"
    disabled="disabled"
    type="button"
  >
    <!---->
     
    <span
      class="ec-btn__text"
      data-test="ec-btn__text"
    >
      
    Convert & Pay
  
    </span>
     
    <!---->
  </button>
   
  <div
    class="ec-dropdown-search"
    data-test="ec-dropdown-search"
  >
    <ec-stub
      class="ec-dropdown-search__trigger"
      data-test="ec-popover-dropdown-search ec-stub ec-popover-stub"
      disabled="true"
      offset="8"
      placement="bottom"
      popoverinnerclass="ec-dropdown-search__popover"
      popperoptions="[object Object]"
    >
      <button
        class="ec-btn ec-btn--md ec-btn--rounded ec-btn--icon-only ec-btn--primary ec-btn--primary-reverse ec-btn-dropdown__dropdown-btn"
        data-test="ec-btn-dropdown__dropdown-btn ec-btn"
        disabled="disabled"
        type="submit"
      >
        <svg
          class="ec-btn__icon ec-icon"
          data-test="ec-btn__icon"
          height="22"
          width="22"
        >
          <use
            xlink:href="#ec-simple-arrow-drop-down"
          />
        </svg>
         
        <!---->
         
        <!---->
      </button>
        
      <div>
        <ul
          class="ec-dropdown-search__item-list"
          data-test="ec-dropdown-search__item-list"
        >
          <!---->
           
          <!---->
           
        </ul>
      </div>
    </ec-stub>
  </div>
</div>
`;
